force-app/main/default/objects/Interview__c/fields/Interview_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Interview_Date_Time__c</fullName>
    <description>The time and date of the interview</description>
    <inlineHelpText>The time and date of the interview</inlineHelpText>
    <label>Interview Date/Time</label>
    <type>DateTime</type>
</CustomField>