force-app/main/default/objects/Interview__c/fields/Interview_Format__c.field-meta.xml
<CustomField>
    <fullName>Interview_Format__c</fullName>
    <description>The format in which the interview will be conducted</description>
    <inlineHelpText>The format in which the interview will be conducted</inlineHelpText>
    <label>Interview Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Teleconference</fullName>
            </value>
            <value>
                <fullName>Telephone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>