force-app/main/default/objects/Interview__c/fields/Interview_Round__c.field-meta.xml
<CustomField>
    <fullName>Interview_Round__c</fullName>
    <description>The indicator of which round of interviews with the applicant this represents</description>
    <inlineHelpText>The indicator of which round of interviews with the applicant this represents</inlineHelpText>
    <label>Interview Round</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Second</fullName>
            </value>
            <value>
                <fullName>Third</fullName>
            </value>
            <value>
                <fullName>Fourth</fullName>
            </value>
            <value>
                <fullName>Fifth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>